Cambios realizados en el archivo index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Curso Github</title>
 </head>
 <body>
-    
+    <h1>Mi primer pagina web</h1>
+    <p>Para aprender Git y Github</p>
 </body>
 </html>
